--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,12 +1,4 @@
-<div id="<%= dom_id article %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= article.title %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Body:</strong>
-    <%= article.body %>
-  </p>
-
+<div class="border border-sky-100 rounded-lg p-4 mb-4">
+  <h2><%= link_to article.title, article, class: "font-semibold text-lg text-blue-600" %></h2>
+  <p><%= article.body %></p>
 </div>
