--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,17 +5,9 @@
 
   <% content_for :title, "Articles" %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Articles</h1>
-    <%= link_to "New article", new_article_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-  </div>
+  <h1 class="font-bold text-4xl text-center my-3">Articles</h1>
 
   <div id="articles" class="min-w-full">
-    <% @articles.each do |article| %>
-      <%= render article %>
-      <p>
-        <%= link_to "Show this article", article, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-      </p>
-    <% end %>
+    <%= render @articles %>
   </div>
 </div>
