--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,9 +5,15 @@
 
   <% content_for :title, "Articles" %>
 
+  <%= link_to "Create a new Article", new_article_path, class: "text-blue-800" %>
+
   <h1 class="font-bold text-4xl text-center my-3">Articles</h1>
 
-  <div id="articles" class="min-w-full">
+  <div class="flex justify-center">
+    <%= render partial: "search/form" %>
+  </div>
+
+  <div id="js-articles" class="min-w-full mt-3">
     <%= render @articles %>
   </div>
 </div>
