add automatic suggestions

--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -1,6 +1,14 @@
-<%= form_with(url: search_path, method: :post, class: "w-1/3") do |f| %>
+<%= form_with(url: search_path, method: :post, class: "w-1/3", data: {
+  controller: "search",
+  action: "keyup->search#suggestions",
+  suggestions_url: search_suggestions_path()
+}) do |f| %>
   <div class="relative">
-    <%= f.text_field :query,
+
+    <%= f.text_field :query, data: {
+        search_target: "input",
+        action: "blur->search#suggestions"
+      },
       placeholder: "Search by title or description...",
       autocomplete: :off,
       class: "w-full p-2 border boder-gray-300 rounded-lg focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200"
@@ -8,5 +16,11 @@
     <div class="absolute inset-y-0 right-0 flex items-center">
       <%= f.submit "Search", class: "p-2 text-white bg-indigo-500 rounded-lg hover:bg-indigo-600 focus:outline-none focus:bg-indigo-600 cursor-pointer" %>
     </div>
+
+    <div id="js-search-suggestions" class="absolute w-full mt-2 bg-white rounded-lg shadow-lg"
+      data-search-target="suggestions" data-action="mousedown->search#childClicked">
+      <%= render partial: "search/suggestions", locals: { results: @results } %>
+    </div>
+
   </div>
 <% end %>
